--- a/src/RedisMemoryCacheInvalidationCore/RedisMemoryCacheInvalidationCore.csproj
+++ b/src/RedisMemoryCacheInvalidationCore/RedisMemoryCacheInvalidationCore.csproj
@@ -8,7 +8,9 @@
     <Copyright>2014-2020 Chris McKee, Lemaitre/Cybermaxs</Copyright>
     <OutputTypeEx>Library</OutputTypeEx>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <IncludeSource>true</IncludeSource>
+    <IncludeSource>false</IncludeSource>
+
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
     <PackageId>RedisMemoryCacheInvalidationCore</PackageId>
     <Title>RedisMemoryCacheInvalidationCore</Title>
@@ -21,7 +23,14 @@
   <PropertyGroup>
     <Deterministic>false</Deterministic>
   </PropertyGroup>
- 
+
+  <ItemGroup>
+    <Compile Include="..\RedisMemoryCacheInvalidation\**\*.cs" Exclude="..\RedisMemoryCacheInvalidation\obj\**\*.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="..\RedisMemoryCacheInvalidation\Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="StackExchange.Redis" Version="2.1.58" />
     <PackageReference Include="System.Runtime.Caching" Version="4.7.0" />
