--- a/src/RedisMemoryCacheInvalidationCore.Strong/RedisMemoryCacheInvalidationCoreStrong.csproj
+++ b/src/RedisMemoryCacheInvalidationCore.Strong/RedisMemoryCacheInvalidationCoreStrong.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netstandard2.0;net472;net462</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;netstandard2.0;net48</TargetFrameworks>
     <AssemblyTitle>RedisMemoryCacheInvalidation</AssemblyTitle>
     <Company>RedisMemoryCacheInvalidation - Core</Company>
     <Author>RedisMemoryCacheInvalidation - Core</Author>
@@ -9,9 +9,9 @@
     <OutputTypeEx>Library</OutputTypeEx>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <IncludeSource>false</IncludeSource>
-
+    <RunCodeAnalysis>false</RunCodeAnalysis>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-
+    <NoWarn>CS1591;CS1734</NoWarn>
     <PackageId>RedisMemoryCacheInvalidationCoreStrong</PackageId>
     <Title>RedisMemoryCacheInvalidationCore Strong Signed</Title>
     <Summary>A redis-powered local memory cache invalidation mechanism.</Summary>
@@ -32,10 +32,11 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
     <Deterministic>false</Deterministic>
-    <AssemblyOriginatorKeyFile>RedisMemoryCacheInvalidationCoreStrong.pfx</AssemblyOriginatorKeyFile>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>redismemorycache.snk</AssemblyOriginatorKeyFile>
+    <PublicSign>true</PublicSign>
   </PropertyGroup>
 
   <ItemGroup>
@@ -46,8 +47,8 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="StackExchange.Redis" Version="2.1.58" />
-    <PackageReference Include="System.Runtime.Caching" Version="4.7.0" />
+    <PackageReference Include="StackExchange.Redis" Version="[2.1.58,)" />
+    <PackageReference Include="System.Runtime.Caching" Version="[4.7,)" />
   </ItemGroup>
 
 </Project>
