--- a/src/RedisMemoryCacheInvalidationCore/RedisMemoryCacheInvalidationCore.csproj
+++ b/src/RedisMemoryCacheInvalidationCore/RedisMemoryCacheInvalidationCore.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netstandard2.0;net472;net462</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;netstandard2.0;net48</TargetFrameworks>
     <AssemblyTitle>RedisMemoryCacheInvalidation</AssemblyTitle>
     <Company>RedisMemoryCacheInvalidation - Core</Company>
     <Author>RedisMemoryCacheInvalidation - Core</Author>
@@ -9,6 +9,9 @@
     <OutputTypeEx>Library</OutputTypeEx>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <IncludeSource>false</IncludeSource>
+    
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <NoWarn>CS1591;CS1734</NoWarn>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
@@ -43,8 +46,8 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="StackExchange.Redis" Version="2.1.58" />
-    <PackageReference Include="System.Runtime.Caching" Version="4.7.0" />
+    <PackageReference Include="StackExchange.Redis" Version="[2.1.58,)" />
+    <PackageReference Include="System.Runtime.Caching" Version="[4.7,)" />
   </ItemGroup>
 
 </Project>
