--- a/tests/RedisMemoryCacheInvalidation.Tests/RedisMemoryCacheInvalidation.Tests.csproj
+++ b/tests/RedisMemoryCacheInvalidation.Tests/RedisMemoryCacheInvalidation.Tests.csproj
@@ -1,19 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     <AssemblyTitle>RedisMemoryCacheInvalidation.Test</AssemblyTitle>
     <Product>RedisMemoryCacheInvalidation.Test</Product>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.13.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
-    <PackageReference Include="Moq" Version="4.14.5" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="[17.5,)" />
+    <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="redis-inside" Version="3.3.0" />
-    <PackageReference Include="ReportGenerator" Version="4.6.1" />
-    <PackageReference Include="StackExchange.Redis" Version="2.1.58" />
-    <PackageReference Include="System.Runtime.Caching" Version="4.7.0" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.2">
+    <PackageReference Include="ReportGenerator" Version="5.1.20" />
+    <PackageReference Include="System.Runtime.Caching" Version="[4.7,)" />
+    <PackageReference Include="xunit" Version="[2.4,)" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="[2.4,)">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
