--- a/tests/RedisMemoryCacheInvalidation.Tests/RedisMemoryCacheInvalidation.Tests.csproj
+++ b/tests/RedisMemoryCacheInvalidation.Tests/RedisMemoryCacheInvalidation.Tests.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.13.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="[17.5,)" />
+	<PackageReference Include="GitHubActionsTestLogger" Version="2.1.0" PrivateAssets="all" />
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="redis-inside" Version="3.3.0" />
     <PackageReference Include="ReportGenerator" Version="5.1.20" />
@@ -16,6 +17,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+	<PackageReference Include="coverlet.collector" Version="[3.2,)" PrivateAssets="all" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\RedisMemoryCacheInvalidation\RedisMemoryCacheInvalidation.csproj" />
