--- a/src/RedisMemoryCacheInvalidationCore.Strong/RedisMemoryCacheInvalidationCoreStrong.csproj
+++ b/src/RedisMemoryCacheInvalidationCore.Strong/RedisMemoryCacheInvalidationCoreStrong.csproj
@@ -30,11 +30,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\iconpkg.png" />
-    <None Include="..\..\LICENSE" />
+    <None Include="..\..\iconpkg.png" Pack="true" PackagePath="\"/>
+    <None Include="..\..\LICENSE" Pack="true" PackagePath="\"/>
     <None Include="..\..\readme.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
-  
+
   <PropertyGroup>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
     <Deterministic>false</Deterministic>
@@ -49,7 +49,7 @@
   <ItemGroup>
     <Compile Remove="..\RedisMemoryCacheInvalidation\Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <PackageReference Include="StackExchange.Redis" Version="2.8.0" />
     <PackageReference Include="System.Runtime.Caching" Version="8.0.0" />
