--- a/src/RedisMemoryCacheInvalidationCore.Strong/RedisMemoryCacheInvalidationCoreStrong.csproj
+++ b/src/RedisMemoryCacheInvalidationCore.Strong/RedisMemoryCacheInvalidationCoreStrong.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1;netstandard2.0;net8.0;net48</TargetFrameworks>
     <AssemblyTitle>RedisMemoryCacheInvalidation</AssemblyTitle>
     <Company>RedisMemoryCacheInvalidation - Core</Company>
     <Author>RedisMemoryCacheInvalidation - Core</Author>
     <Product>RedisMemoryCacheInvalidation</Product>
-    <Copyright>2014-2024 Chris McKee, Lemaitre/Cybermaxs</Copyright>
+    <Copyright>2014-2025 Chris McKee, Lemaitre/Cybermaxs</Copyright>
     <OutputTypeEx>Library</OutputTypeEx>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <IncludeSource>false</IncludeSource>
@@ -22,7 +22,7 @@
     <RepositoryUrl>https://github.com/ChrisMcKee/RedisMemoryCacheInvalidationCore</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
 
-    <Version>2.4.0</Version>
+    <Version>2.5.0</Version>
 
     <PackageReadmeFile>readme.md</PackageReadmeFile>
     <PackageIconUrl>iconpkg.png</PackageIconUrl>
@@ -30,9 +30,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\iconpkg.png" Pack="true" PackagePath="\"/>
-    <None Include="..\..\LICENSE" Pack="true" PackagePath="\"/>
-    <None Include="..\..\readme.md" Pack="true" PackagePath="\"/>
+    <None Include="..\..\iconpkg.png" Pack="true" PackagePath="\" />
+    <None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
+    <None Include="..\..\readme.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <PropertyGroup>
@@ -51,8 +51,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="StackExchange.Redis" Version="2.8.37" />
-    <PackageReference Include="System.Runtime.Caching" Version="9.0.5" />
+    <PackageReference Include="StackExchange.Redis" />
+    <PackageReference Include="System.Runtime.Caching" />
   </ItemGroup>
 
 </Project>
