--- a/src/RedisMemoryCacheInvalidation/RedisMemoryCacheInvalidation.csproj
+++ b/src/RedisMemoryCacheInvalidation/RedisMemoryCacheInvalidation.csproj
@@ -9,17 +9,48 @@
     <OutputTypeEx>Library</OutputTypeEx>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <IncludeSource>true</IncludeSource>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <NoWarn>CS1591;CS1734</NoWarn>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
-    <PackageId>RedisMemoryCacheInvalidationCore</PackageId>
-    <Title>RedisMemoryCacheInvalidationCore</Title>
+    <!-- Default to unsigned version -->
+    <PackageId Condition="'$(SignAssembly)' != 'true'">RedisMemoryCacheInvalidationCore</PackageId>
+    <PackageId Condition="'$(SignAssembly)' == 'true'">RedisMemoryCacheInvalidationCoreStrong</PackageId>
+    
+    <Title Condition="'$(SignAssembly)' != 'true'">RedisMemoryCacheInvalidationCore</Title>
+    <Title Condition="'$(SignAssembly)' == 'true'">RedisMemoryCacheInvalidationCore Strong Signed</Title>
+    
     <Summary>A redis-powered local memory cache invalidation mechanism.</Summary>
     <Description>This package allow to invalidate local memory cache items with the help of StackExchange.Redis</Description>
 
+    <PackageTags>redis,cache,invalidation</PackageTags>
+    <PackageProjectUrl>https://github.com/ChrisMcKee/RedisMemoryCacheInvalidationCore</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/ChrisMcKee/RedisMemoryCacheInvalidationCore</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+
     <Version>2.5.0</Version>
+
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <PackageIconUrl>iconpkg.png</PackageIconUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
+  <!-- Package content files -->
+  <ItemGroup>
+    <None Include="..\..\iconpkg.png" Pack="true" PackagePath="\" />
+    <None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
+    <None Include="..\..\readme.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+
+  <!-- Assembly signing configuration -->
   <PropertyGroup>
     <Deterministic>false</Deterministic>
+    <!-- Enable assembly signing when SignAssembly property is set to true -->
+    <SignAssembly Condition="'$(SignAssembly)' == 'true'">true</SignAssembly>
+    <AssemblyOriginatorKeyFile Condition="'$(SignAssembly)' == 'true'">redismemorycache.snk</AssemblyOriginatorKeyFile>
+    <PublicSign Condition="'$(SignAssembly)' == 'true'">true</PublicSign>
+    <!-- Define SIGNED preprocessor symbol for signed builds -->
+    <DefineConstants Condition="'$(SignAssembly)' == 'true'">$(DefineConstants);SIGNED</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
