--- a/tests/RedisMemoryCacheInvalidation.Tests/RedisMemoryCacheInvalidation.Tests.csproj
+++ b/tests/RedisMemoryCacheInvalidation.Tests/RedisMemoryCacheInvalidation.Tests.csproj
@@ -9,9 +9,9 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="GitHubActionsTestLogger" PrivateAssets="all" />
     <PackageReference Include="Moq" />
-    <PackageReference Include="redis-inside" />
     <PackageReference Include="ReportGenerator" />
     <PackageReference Include="System.Runtime.Caching" />
+    <PackageReference Include="Testcontainers.Redis" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio">
       <PrivateAssets>all</PrivateAssets>
