--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,13 +6,20 @@ on:
     branches: [ "main", "master" ]
     paths:
       - '*'
-      - '!/readme.md'
-      - '!/SECURITY.md'
-      - '!/licence.txt'
-      - '!/Benchmark/*'
-      - '!/IntegrationTest/*'
-      - '!/dists/*'
-      - '!/assets/*'
+    paths-ignore:
+      - '/readme.md'
+      - '/SECURITY.md'
+      - '/licence.txt'
+      - '/Benchmark/*'
+      - '/IntegrationTest/*'
+      - '/dists/*'
+      - '/assets/*'
+      - '.github/**'
+
+env:
+  DOTNET_NOLOGO: true
+  DOTNET_GENERATE_ASPNET_CERTIFICATE: false
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
 
 jobs:
   build:
@@ -20,14 +27,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: 'Harden Runner'
+      uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
+      with:
+        egress-policy: audit
+
+    - uses: actions/checkout@v5
+
     - name: Setup .NET
-      uses: actions/setup-dotnet@v2
+      uses: actions/setup-dotnet@v5
       with:
         dotnet-version: 8.0.x
+
     - name: Restore dependencies
       run: dotnet restore tests/RedisMemoryCacheInvalidation.Tests/RedisMemoryCacheInvalidation.Tests.csproj
     - name: Build
-      run: dotnet build --no-restore tests/RedisMemoryCacheInvalidation.Tests/RedisMemoryCacheInvalidation.Tests.csproj -c Release /p:CI=true
+      run: dotnet build --no-restore tests/RedisMemoryCacheInvalidation.Tests/RedisMemoryCacheInvalidation.Tests.csproj -c Release
     - name: Test
-      run: dotnet test --no-build --verbosity normal tests/RedisMemoryCacheInvalidation.Tests/RedisMemoryCacheInvalidation.Tests.csproj -c Release --logger GitHubActions /p:CI=true
+      run: dotnet test --no-build --verbosity normal tests/RedisMemoryCacheInvalidation.Tests/RedisMemoryCacheInvalidation.Tests.csproj -c Release --logger "trx;LogFileName=test-results.trx" --logger "GitHubActions" --results-directory ./TestResults
+    - name: Publish Test Results
+      uses: dorny/test-reporter@v2
+      if: success() || failure()
+      with:
+        name: .NET Tests
+        path: TestResults/test-results.trx
+        reporter: dotnet-trx
