--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,15 +6,14 @@ on:
     branches: [ "main", "master" ]
     paths:
       - '*'
-    paths-ignore:
-      - '/readme.md'
-      - '/SECURITY.md'
-      - '/licence.txt'
-      - '/Benchmark/*'
-      - '/IntegrationTest/*'
-      - '/dists/*'
-      - '/assets/*'
-      - '.github/**'
+      - '!/readme.md'
+      - '!/SECURITY.md'
+      - '!/licence.txt'
+      - '!/Benchmark/*'
+      - '!/IntegrationTest/*'
+      - '!/dists/*'
+      - '!/assets/*'
+      - '!/.github/**'
 
 env:
   DOTNET_NOLOGO: true
