--- a/src/RedisMemoryCacheInvalidation/RedisMemoryCacheInvalidation.csproj
+++ b/src/RedisMemoryCacheInvalidation/RedisMemoryCacheInvalidation.csproj
@@ -54,6 +54,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="StackExchange.Redis" />
     <PackageReference Include="System.Runtime.Caching" />
   </ItemGroup>
